--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -6268,7 +6268,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "cd6e28dc",
+   "id": "9f85b81c",
    "metadata": {},
    "outputs": [
     {
@@ -6295,7 +6295,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "b8db4407",
+   "id": "ea8fd4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6307,7 +6307,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "cce3e59a",
+   "id": "2a3d10ef",
    "metadata": {},
    "outputs": [
     {
@@ -6645,7 +6645,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "ac23b6a6",
+   "id": "44cddbd8",
    "metadata": {},
    "outputs": [
     {
@@ -6673,7 +6673,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "7a981745",
+   "id": "ba4ea1ec",
    "metadata": {},
    "outputs": [
     {
@@ -6701,7 +6701,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ae54c85a",
+   "id": "bee6c89a",
    "metadata": {},
    "outputs": [
     {
@@ -6729,7 +6729,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "182a0c9c",
+   "id": "de0bd4e9",
    "metadata": {},
    "outputs": [
     {
@@ -6757,7 +6757,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "2d09a390",
+   "id": "9093f5e7",
    "metadata": {},
    "outputs": [
     {
@@ -6785,7 +6785,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "14ad8d86",
+   "id": "9a5154cb",
    "metadata": {},
    "outputs": [
     {
@@ -6904,7 +6904,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "1511a452",
+   "id": "3e29e40b",
    "metadata": {},
    "outputs": [
     {
@@ -7026,7 +7026,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "2aeb2554",
+   "id": "523f08cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7038,7 +7038,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "17ed24d0",
+   "id": "4c4e3069",
    "metadata": {},
    "outputs": [
     {
@@ -7202,7 +7202,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c864fca8",
+   "id": "d2370b7a",
    "metadata": {},
    "outputs": [
     {
@@ -7230,7 +7230,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "0b423d0b",
+   "id": "5d0ae0b8",
    "metadata": {},
    "outputs": [
     {
@@ -7258,7 +7258,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "36bab22e",
+   "id": "6a1e8e9b",
    "metadata": {},
    "outputs": [
     {
@@ -7286,7 +7286,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "202a9c17",
+   "id": "70b4e364",
    "metadata": {},
    "outputs": [
     {
@@ -7314,7 +7314,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "556568d9",
+   "id": "0824fa4d",
    "metadata": {},
    "outputs": [
     {
@@ -7342,7 +7342,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "4739d76c",
+   "id": "71fec7cb",
    "metadata": {},
    "outputs": [
     {
@@ -7444,7 +7444,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "a251d136",
+   "id": "8508bf83",
    "metadata": {},
    "outputs": [
     {
@@ -7548,8 +7548,330 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "id": "57868c50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     83.473852\n",
+       "District    76.956733\n",
+       "Name: Average Math Score, dtype: float64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_math_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "45b6f230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     83.896421\n",
+       "District    80.966636\n",
+       "Name: Average Reading Score, dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_reading_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "62f37abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     93.620830\n",
+       "District    66.548453\n",
+       "Name: % Passing Math, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "e0c5a81e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     96.586489\n",
+       "District    80.799062\n",
+       "Name: % Passing Reading, dtype: float64"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_passing_reading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "82cdc34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School Type\n",
+       "Charter     90.432244\n",
+       "District    53.672208\n",
+       "Name: % Overall Passing, dtype: float64"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]\n",
+    "\n",
+    "type_overall_passing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "65d63d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "8fcdb699",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dede5664",
+   "id": "26b2a8d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7557,7 +7879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "500d3624",
+   "id": "efcbfda5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7565,7 +7887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89feaa8",
+   "id": "3b3c03d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7573,63 +7895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2014eb86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99e2b22f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f764d79e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d42200be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3379f121",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adc374ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6aa1299d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd4ea363",
+   "id": "a1477a43",
    "metadata": {},
    "outputs": [],
    "source": []
